--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -7,14 +7,13 @@
     <script src="../js/echarts.min.js"></script>
     <!-- 引入element-ui -->
     <link rel="stylesheet" type="text/css" href="../css/elementUi.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     <script src="../js/vue.js"></script>
     <script src="../js/elementUi.js"></script>
 
     <!-- 设置编码-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-
-
 <body>
     <div id="head">
         <el-menu
@@ -26,38 +25,162 @@
                 text-color="#fff"
                 active-text-color="#ffd04b">
             <el-menu-item index="1">知识图谱处理</el-menu-item>
-            <el-submenu index="2">
-                <template slot="title">我的知识图谱</template>
-                <el-menu-item index="2-1">选项1</el-menu-item>
-                <el-menu-item index="2-2">选项2</el-menu-item>
-                <el-menu-item index="2-3">选项3</el-menu-item>
-                <el-submenu index="2-4">
-                    <template slot="title">选项4</template>
-                    <el-menu-item index="2-4-1">选项1</el-menu-item>
-                    <el-menu-item index="2-4-2">选项2</el-menu-item>
-                    <el-menu-item index="2-4-3">选项3</el-menu-item>
-                </el-submenu>
-            </el-submenu>
-            <el-menu-item index="3" disabled>消息中心</el-menu-item>
-            <el-menu-item index="4"><a href="https://www.ele.me" target="_blank">订单管理</a></el-menu-item>
+            <el-menu-item index="2">我的知识图谱</el-menu-item>
+            <el-menu-item index="3">我的信息</el-menu-item>
         </el-menu>
     </div>
-<div id="chart" style="width:1000px;height:800px"></div>
+    <div id="chart"></div>
+    <div id="chartEdit">
+        <el-dialog
+                :title="this.getDialogTitle()"
+                :visible.sync="dialogVisible"
+                width="30%"
+        >
+            <el-form ref="form" :model="nodeForm" label-width="80px" v-if="this.isNode()">
+                <el-form-item label="实体名称" >
+                    <el-input v-model="nodeForm.name" :placeholder="nodeName"></el-input>
+                </el-form-item>
+                <el-form-item label="实体描述" >
+                    <el-input v-model="nodeForm.des" :placeholder="nodeDes"></el-input>
+                </el-form-item>
+                <el-form-item label="实体大小" >
+                    <el-slider v-model="nodeForm.symbolSize"></el-slider>
+                    <!--                    <el-input v-model="nodeForm.symbolSize" :placeholder="nodeSymbolSize"></el-input>-->
+                </el-form-item>
+                <el-form-item label="实体种类" >
+                    <el-input v-model="nodeForm.category" :placeholder="nodeCategory"></el-input>
+                </el-form-item>
+            </el-form>
+            <el-form ref="form" :model="linkForm" label-width="80px" v-if="!this.isNode()">
+                <el-form-item label="关系名称" >
+                    <el-input v-model="linkForm.name" :placeholder="linkName"></el-input>
+                </el-form-item>
+                <el-form-item label="起点实体" >
+                    <el-input v-model="linkForm.source" :placeholder="linkSource" disabled></el-input>
+                </el-form-item>
+                <el-form-item label="终点实体" >
+                    <el-input v-model="linkForm.target" :placeholder="linkTarget" disabled></el-input>
+                </el-form-item>
+                <el-form-item label="关系描述" >
+                    <el-input v-model="linkForm.des" :placeholder="linkDes"></el-input>
+                </el-form-item>
+            </el-form>
+            <span slot="footer" class="dialog-footer">
+                    <el-button @click="dialogVisible = false">取消</el-button>
+                    <el-button type="primary" @click="change_handleClose">修改</el-button>
+                    <el-button type="danger" @click="delete_handleClose">删除</el-button>
+                </span>
+        </el-dialog>
+    </div>
 </body>
 <!-- 链接关键文件-->
-<script src="../static/js/index.js"></script>
+<script src="js/index.js"></script>
 <script>
-    new Vue({
+    var head=new Vue({
         el:'#head',
         data:function() {
             return {
                 activeIndex: '1',
+
             };
         },
         methods: {
             handleSelect(key, keyPath) {
                 console.log(key, keyPath);
             }
+        }
+    });
+    var chartEdit=new Vue({
+        el:'#chartEdit',
+        data:function() {
+            return {
+                dialogVisible: false,
+                chosenType:'',
+                nodeName:'',
+                nodeDes:'',
+                nodeSymbolSize:'',
+                nodeCategory:'',
+                linkName:'',
+                linkDes:'',
+                linkSource:'',
+                linkTarget:'',
+                nodeForm:{
+                    name:'',
+                    des:'',
+                    symbolSize:'',
+                    category:'',
+                },
+                linkForm:{
+                    name:'',
+                    des:'',
+                    source:'',
+                    target:'',
+                }
+
+
+            };
+        },
+        methods: {
+            isNode(){
+                if(this.chosenType==='node') return true;
+                else return false;
+            },
+            getDialogTitle(){
+                if(this.chosenType==='node') return "实体编辑";
+                else return "关系编辑";
+            },
+            change_handleClose(done) {
+                this.$confirm('确认更改？')
+                    .then(_ => {
+                        var isFinish=false;
+                        if(this.isNode()){
+                            isFinish=changeNode(this.nodeName,this.nodeForm);
+                        }else{
+                            isFinish=changeLink(this.linkName,this.linkForm);
+                        }
+                        if(isFinish) this.dialogVisible=false;
+                    })
+                    .catch(_ => {
+
+                    });
+            },
+            delete_handleClose(done) {
+                this.$confirm('确认删除？')
+                    .then(_ => {
+                        var isFinish=false;
+                        if(this.isNode()){
+                            isFinish=deleteNode(this.nodeName);
+                        }else{
+                            isFinish=deleteLink(this.linkName);
+                        }
+                        if(isFinish) this.dialogVisible=false;
+
+                    })
+                    .catch(_ => {
+
+                    });
+            },
+            failureAlarm(info) {
+                this.$notify({
+                    title: '警告',
+                    message: info,
+                    type: 'warning'
+                });
+            },
+            successNotice() {
+                this.$notify({
+                    title: '成功',
+                    message: '修改成功',
+                    type: 'success'
+                });
+            },
+            messageNotice(info) {
+                this.$notify.info({
+                    title: '消息',
+                    message: info,
+                });
+            },
+
         }
     })
 </script>
