--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -15,64 +15,103 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-    <div id="head">
-        <el-menu
-                :default-active="activeIndex"
-                class="el-menu-demo"
-                mode="horizontal"
-                @select="handleSelect"
-                background-color="#545c64"
-                text-color="#fff"
-                active-text-color="#ffd04b">
-            <el-menu-item index="1">知识图谱处理</el-menu-item>
-            <el-menu-item index="2">我的知识图谱</el-menu-item>
-            <el-menu-item index="3">我的信息</el-menu-item>
-        </el-menu>
-    </div>
-    <div id="chart"></div>
-    <div id="chartEdit">
-        <el-dialog
-                :title="this.getDialogTitle()"
-                :visible.sync="dialogVisible"
-                width="30%"
-        >
-            <el-form ref="form" :model="nodeForm" label-width="80px" v-if="this.isNode()">
-                <el-form-item label="实体名称" >
-                    <el-input v-model="nodeForm.name" :placeholder="nodeName"></el-input>
-                </el-form-item>
-                <el-form-item label="实体描述" >
-                    <el-input v-model="nodeForm.des" :placeholder="nodeDes"></el-input>
-                </el-form-item>
-                <el-form-item label="实体大小" >
-                    <el-slider v-model="nodeForm.symbolSize"></el-slider>
-                    <!--                    <el-input v-model="nodeForm.symbolSize" :placeholder="nodeSymbolSize"></el-input>-->
-                </el-form-item>
-                <el-form-item label="实体种类" >
-                    <el-input v-model="nodeForm.category" :placeholder="nodeCategory"></el-input>
-                </el-form-item>
-            </el-form>
-            <el-form ref="form" :model="linkForm" label-width="80px" v-if="!this.isNode()">
-                <el-form-item label="关系名称" >
-                    <el-input v-model="linkForm.name" :placeholder="linkName"></el-input>
-                </el-form-item>
-                <el-form-item label="起点实体" >
-                    <el-input v-model="linkForm.source" :placeholder="linkSource" disabled></el-input>
-                </el-form-item>
-                <el-form-item label="终点实体" >
-                    <el-input v-model="linkForm.target" :placeholder="linkTarget" disabled></el-input>
-                </el-form-item>
-                <el-form-item label="关系描述" >
-                    <el-input v-model="linkForm.des" :placeholder="linkDes"></el-input>
-                </el-form-item>
-            </el-form>
-            <span slot="footer" class="dialog-footer">
-                    <el-button @click="dialogVisible = false">取消</el-button>
-                    <el-button type="primary" @click="change_handleClose">修改</el-button>
-                    <el-button type="danger" @click="delete_handleClose">删除</el-button>
-                </span>
-        </el-dialog>
-    </div>
+<div id="head">
+    <el-menu
+            :default-active="activeIndex"
+            class="el-menu-demo"
+            mode="horizontal"
+            @select="handleSelect"
+            background-color="#545c64"
+            text-color="#fff"
+            active-text-color="#ffd04b">
+        <el-menu-item index="1">知识图谱处理</el-menu-item>
+        <el-menu-item index="2" disabled>我的知识图谱</el-menu-item>
+        <el-menu-item index="3" disabled>我的信息</el-menu-item>
+    </el-menu>
+</div>
+<div id="menu">
+    <el-menu default-active="1-4-1" class="el-menu-vertical-demo" >
+        <el-submenu index="1">
+            <template slot="title">
+                <i class="el-icon-location"></i>
+                <span slot="title">实体</span>
+            </template>
+            <el-menu-item-group>
+                <el-menu-item index="1-1">增加实体</el-menu-item>
+                <el-menu-item index="1-2" disabled>实体信息搜索</el-menu-item>
+            </el-menu-item-group>
+        </el-submenu>
+        <el-submenu index="2">
+            <template slot="title">
+                <i class="el-icon-location"></i>
+                <span slot="title">关系</span>
+            </template>
+            <el-menu-item-group>
+                <el-menu-item index="2-1">增加关系</el-menu-item>
+                <el-menu-item index="2-2" disabled>关系信息搜索</el-menu-item>
+            </el-menu-item-group>
+        </el-submenu>
+        <el-menu-item index="3" disabled>
+            <i class="el-icon-document"></i>
+            <span slot="title">图谱信息</span>
+        </el-menu-item>
+        <el-menu-item index="4" disabled>
+            <i class="el-icon-setting"></i>
+            <span slot="title">扩展功能</span>
+        </el-menu-item>
+    </el-menu>
+
+</div>
+<div id="chart"></div>
+<div id="chartEdit">
+    <el-dialog
+            :title="this.getDialogTitle()"
+            :visible.sync="dialogVisible"
+            width="30%"
+    >
+        <el-form ref="form" :model="nodeForm" label-width="80px" v-if="this.isNode()">
+            <el-form-item label="实体名称" >
+                <el-input v-model="nodeForm.name" :placeholder="nodeName"></el-input>
+            </el-form-item>
+            <el-form-item label="实体描述" >
+                <el-input v-model="nodeForm.des" :placeholder="nodeDes"></el-input>
+            </el-form-item>
+            <el-form-item label="实体大小" >
+                <el-slider v-model="nodeForm.symbolSize"></el-slider>
+                <!--                    <el-input v-model="nodeForm.symbolSize" :placeholder="nodeSymbolSize"></el-input>-->
+            </el-form-item>
+            <el-form-item label="实体种类" >
+                <el-input v-model="nodeForm.category" :placeholder="nodeCategory"></el-input>
+            </el-form-item>
+        </el-form>
+        <el-form ref="form" :model="linkForm" label-width="80px" v-if="!this.isNode()">
+            <el-form-item label="关系名称" >
+                <el-input v-model="linkForm.name" :placeholder="linkName"></el-input>
+            </el-form-item>
+            <el-form-item label="起点实体" >
+                <el-input v-model="linkForm.source" :placeholder="linkSource" disabled></el-input>
+            </el-form-item>
+            <el-form-item label="终点实体" >
+                <el-input v-model="linkForm.target" :placeholder="linkTarget" disabled></el-input>
+            </el-form-item>
+            <el-form-item label="关系描述" >
+                <el-input v-model="linkForm.des" :placeholder="linkDes"></el-input>
+            </el-form-item>
+        </el-form>
+        <span slot="footer" class="dialog-footer">
+                <el-button @click="dialogVisible = false">取消</el-button>
+                <el-button type="primary" @click="change_handleClose">修改</el-button>
+                <el-button type="danger" @click="delete_handleClose">删除</el-button>
+            </span>
+    </el-dialog>
+</div>
 </body>
+<style>
+    .el-menu-vertical-demo:not(.el-menu--collapse) {
+        width: 200px;
+        min-height: 400px;
+    }
+</style>
 <!-- 链接关键文件-->
 <script src="js/index.js"></script>
 <script>
@@ -89,6 +128,18 @@
                 console.log(key, keyPath);
             }
         }
+    });
+    var menu=new Vue({
+        el:'#menu',
+        data() {
+            return {
+                isCollapse: true
+            };
+        },
+        methods: {
+
+        }
+
     });
     var chartEdit=new Vue({
         el:'#chartEdit',
@@ -185,3 +236,4 @@
     })
 </script>
 </html>
+
