--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -37,7 +37,7 @@
                 <span slot="title">实体</span>
             </template>
             <el-menu-item-group>
-                <el-menu-item index="1-1">增加实体</el-menu-item>
+                <el-menu-item index="1-1" @click="nodeClick()">增加实体</el-menu-item>
                 <el-menu-item index="1-2" disabled>实体信息搜索</el-menu-item>
             </el-menu-item-group>
         </el-submenu>
@@ -47,7 +47,7 @@
                 <span slot="title">关系</span>
             </template>
             <el-menu-item-group>
-                <el-menu-item index="2-1">增加关系</el-menu-item>
+                <el-menu-item index="2-1" @click="linkClick()">增加关系</el-menu-item>
                 <el-menu-item index="2-2" disabled>关系信息搜索</el-menu-item>
             </el-menu-item-group>
         </el-submenu>
@@ -105,6 +105,47 @@
             </span>
     </el-dialog>
 </div>
+<div id="elementCreate">
+    <el-dialog
+            :title="this.getDialogTitle()"
+            :visible.sync="dialogVisible"
+            width="30%"
+    >
+        <el-form ref="form" :model="nodeForm" label-width="80px" v-if="this.isNode()">
+            <el-form-item label="实体名称" >
+                <el-input v-model="nodeForm.name" :placeholder="nodeName"></el-input>
+            </el-form-item>
+            <el-form-item label="实体描述" >
+                <el-input v-model="nodeForm.des" :placeholder="nodeDes"></el-input>
+            </el-form-item>
+            <el-form-item label="实体大小" >
+                <el-slider v-model="nodeForm.symbolSize"></el-slider>
+                <!--                    <el-input v-model="nodeForm.symbolSize" :placeholder="nodeSymbolSize"></el-input>-->
+            </el-form-item>
+            <el-form-item label="实体种类" >
+                <el-input v-model="nodeForm.category" :placeholder="nodeCategory"></el-input>
+            </el-form-item>
+        </el-form>
+        <el-form ref="form" :model="linkForm" label-width="80px" v-if="!this.isNode()">
+            <el-form-item label="关系名称" >
+                <el-input v-model="linkForm.name" :placeholder="linkName"></el-input>
+            </el-form-item>
+            <el-form-item label="起点实体" >
+                <el-input v-model="linkForm.source" :placeholder="linkSource"></el-input>
+            </el-form-item>
+            <el-form-item label="终点实体" >
+                <el-input v-model="linkForm.target" :placeholder="linkTarget"></el-input>
+            </el-form-item>
+            <el-form-item label="关系描述" >
+                <el-input v-model="linkForm.des" :placeholder="linkDes"></el-input>
+            </el-form-item>
+        </el-form>
+        <span slot="footer" class="dialog-footer">
+                <el-button @click="dialogVisible = false">取消</el-button>
+                <el-button type="primary" @click="create_handleClose()">增加</el-button>
+            </span>
+    </el-dialog>
+</div>
 </body>
 <style>
     .el-menu-vertical-demo:not(.el-menu--collapse) {
@@ -137,7 +178,14 @@
             };
         },
         methods: {
-
+            nodeClick(){
+                elementCreate.chosenType='node'
+                elementCreate.dialogVisible=true;
+            },
+            linkClick(){
+                elementCreate.chosenType='link'
+                elementCreate.dialogVisible=true;
+            }
         }
 
     });
@@ -221,7 +269,94 @@
             successNotice() {
                 this.$notify({
                     title: '成功',
-                    message: '修改成功',
+                    message: '修改成功！',
+                    type: 'success'
+                });
+            },
+            messageNotice(info) {
+                this.$notify.info({
+                    title: '消息',
+                    message: info,
+                });
+            },
+
+        }
+    })
+    var elementCreate=new Vue({
+        el:'#elementCreate',
+        data:function() {
+            return {
+                dialogVisible: false,
+                chosenType:'',
+                nodeName:'',
+                nodeDes:'',
+                nodeSymbolSize:'',
+                nodeCategory:'',
+                linkName:'',
+                linkDes:'',
+                linkSource:'',
+                linkTarget:'',
+                nodeForm:{
+                    name:'',
+                    des:'',
+                    symbolSize:'',
+                    category:'',
+                },
+                linkForm:{
+                    name:'',
+                    des:'',
+                    source:'',
+                    target:'',
+                }
+
+
+            };
+        },
+        methods: {
+            isNode(){
+                if(this.chosenType==='node') return true;
+                else return false;
+            },
+            getDialogTitle(){
+                if(this.chosenType==='node') return "实体增加";
+                else return "关系增加";
+            },
+            create_handleClose(done) {
+                this.$confirm('确认增加？')
+                    .then(_ => {
+                        var isFinish=false;
+                        if(this.isNode()){
+                            isFinish=createNode(this.nodeForm);
+                        }else{
+                            isFinish=createLink(this.linkForm);
+                        }
+                        if(isFinish) {
+                            this.nodeForm.name='';
+                            this.nodeForm.category='';
+                            this.nodeForm.symbolSize=0;
+                            this.nodeForm.des='';
+                            this.linkForm.name='';
+                            this.linkForm.target='';
+                            this.linkForm.source='';
+                            this.linkForm.des='';
+                            this.dialogVisible=false;
+                        }
+                    })
+                    .catch(_ => {
+
+                    });
+            },
+            failureAlarm(info) {
+                this.$notify({
+                    title: '警告',
+                    message: info,
+                    type: 'warning'
+                });
+            },
+            successNotice() {
+                this.$notify({
+                    title: '成功',
+                    message: '增加成功！',
                     type: 'success'
                 });
             },
