--- a/src/main/resources/static/html/Login.html
+++ b/src/main/resources/static/html/Login.html
@@ -57,4 +57,5 @@
 <script src="../js/user.js" type="text/javascript"></script>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
 <script src="../js/login.js" type="text/javascript"></script>
+<script src="../js/api.js" type="text/javascript"></script>
 </html>
