--- a/src/main/resources/static/html/Register.html
+++ b/src/main/resources/static/html/Register.html
@@ -89,4 +89,5 @@
 <script src="../js/user.js" type="text/javascript"></script>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
 <script src="../js/register.js" type="text/javascript"></script>
+<script src="../js/api.js" type="text/javascript"></script>
 </html>
