fix: fix bugs relevant to href

--- a/src/main/resources/static/html/Login.html
+++ b/src/main/resources/static/html/Login.html
@@ -11,11 +11,11 @@
 <div class="Page"><!-- to limit the minimum width-->
     <div class="headerBackground">
         <div class="header">
-            <a href="home.html"><h1 class="logo"><img alt="logo加载失败" src="../logo.png"></h1></a>
+            <a href="index"><h1 class="logo"><img alt="logo加载失败" src="../logo.png"></h1></a>
             <h1 class="title">用&nbsp&nbsp&nbsp&nbsp户&nbsp&nbsp&nbsp&nbsp登&nbsp&nbsp&nbsp&nbsp录</h1>
         </div>
     </div>
-    <a href="home.html"><h1 class="home"><img alt="home加载失败" height="auto" src="../home.png" width="60px"></h1></a>
+    <a href="index"><h1 class="home"><img alt="home加载失败" height="auto" src="../home.png" width="60px"></h1></a>
     <!-- body -->
     <div class="centerArea">
         <div class="centerBox">
@@ -46,7 +46,7 @@
                         </tbody>
                     </table>
                     <a class="myButton1" id="clickToLogin"><span>登录</span></a>
-                    <a class="myButton1 myButton3" href="Register.html" target="_blank"><span>注册</span></a>
+                    <a class="myButton1 myButton3" href="register" target="_blank"><span>注册</span></a>
                 </form>
             </div>
         </div>
