--- a/src/main/resources/static/html/Register.html
+++ b/src/main/resources/static/html/Register.html
@@ -11,11 +11,11 @@
 <div class="Page"><!-- to limit the minimum width-->
     <div class="headerBackground">
         <div class="header">
-            <a href="home.html"><h1 class="logo"><img alt="logo加载失败" src="../logo.png"></h1></a>
+            <a href="index"><h1 class="logo"><img alt="logo加载失败" src="../logo.png"></h1></a>
             <h1 class="title">用&nbsp&nbsp&nbsp&nbsp户&nbsp&nbsp&nbsp&nbsp注&nbsp&nbsp&nbsp&nbsp册</h1>
         </div>
     </div>
-    <a href="home.html"><h1 class="home"><img alt="home加载失败" height="auto" src="../home.png" width="60px"></h1></a>
+    <a href="index"><h1 class="home"><img alt="home加载失败" height="auto" src="../home.png" width="60px"></h1></a>
     <!-- body -->
     <div class="centerArea">
         <div class="centerBox">
@@ -76,14 +76,13 @@
                         </tbody>
                     </table>
                     <a class="myButton1" id="clickToRegister"><span>注册</span></a>
-                    <a class="loginDirectly" href="Login.html"><span>已有账号？直接登录</span></a>
+                    <a class="loginDirectly" href="login"><span>已有账号？直接登录</span></a>
                 </form>
             </div>
         </div>
     </div>
     <!--/body -->
-    <a href="Register.html"><h1 class="return"><img alt="return加载失败" height="auto" src="../return.png" width="60px"></h1>
-    </a>
+<!--    <a href="register"><h1 class="return"><img alt="return加载失败" height="auto" src="../return.png" width="60px"></h1></a>  -->
 </div>
 </body>
 <script src="../js/user.js" type="text/javascript"></script>
