feat: 图谱固定功能

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -60,6 +60,8 @@
                 <el-menu-item index="3-1" @click="saveChartClick()">保存到我的图谱</el-menu-item>
                 <el-menu-item index="3-2" @click="chartXMLDownloadClick()">图谱XML导出</el-menu-item>
                 <el-menu-item index="3-3" @click="chartImgDownloadClick()">图谱图片导出</el-menu-item>
+                <el-menu-item index="3-4" @click="fixChartClick()">图谱固定</el-menu-item>
+                <el-menu-item index="3-5" @click="flexibleChartClick()">解除图谱固定</el-menu-item>
             </el-menu-item-group>
         </el-submenu>
         <el-menu-item index="4" disabled>
@@ -202,6 +204,12 @@
             },
             chartImgDownloadClick(){
                 ChartImgDownload();
+            },
+            fixChartClick(){
+                fixChart();
+            },
+            flexibleChartClick(){
+                flexibleChart();
             },
             successNotice(msg) {
                 this.$notify({
